[package]
name = "number-complex"
version = "0.0.0"
edition = "2021"
license = "Apache-2.0"
keywords = ["numbers", "maths", "number-theory"]
repository = "https://github.com/HellFelix/number-based"
readme = "README.md"
description = "number-based is an attempt of mine to make working with complex numbers simple. "

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
